stream ex 4